<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bgImage"
        android:src="@drawable/logo_beans_bg"
        android:scaleType="fitEnd" />

    <ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_spinner"
        android:visibility="visible" />

    <TextView
        android:id="@+id/facebookText"
        android:text="@string/signup_fb_title"
        android:textSize="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/like_blue"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp" />
    <ImageView
        android:id="@+id/facebookButton"
        android:layout_below="@+id/facebookText"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/facebook_login"
        android:focusableInTouchMode="true"
        android:focusable="true" />
    <TextView
        android:id="@+id/displaynameNoteText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_fb_note"
        android:layout_below="@+id/facebookButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/gray"
        android:textSize="12dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:id="@+id/dashLine"
        android:src="@drawable/dash_line"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/displaynameNoteText"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_email_title"
        android:textSize="15dp"
        android:layout_below="@+id/dashLine"
        android:layout_marginTop="15dp"
        android:textColor="@color/like_blue"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_error_email_already_exists"
        android:textColor="#ffff0202"
        android:textSize="16dp"
        android:layout_toRightOf="@+id/signupText"
        android:layout_alignParentTop="false"
        android:layout_alignBaseline="@+id/signupText"
        android:gravity="right"
        android:layout_marginRight="35dp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_below="@+id/signupText"
        android:layout_marginTop="15dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_weight=".5"
                android:hint="@string/signup_lastname_hint"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_round"
                android:layout_marginRight="5dp"
                android:singleLine="true" />
            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_weight=".5"
                android:hint="@string/signup_firstname_hint"
                android:layout_marginLeft="5dp"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_round"
                android:singleLine="true" />
        </LinearLayout>
        <EditText
            android:id="@+id/emailEditText"
            android:layout_marginTop="15dp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_round"
            android:hint="@string/signup_email_hint"
            android:singleLine="true" />
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:hint="@string/signup_password_hint"
            android:textSize="16dp"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_round"
            android:singleLine="true"
            android:password="true" />
        <EditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_marginTop="15dp"
            android:hint="@string/signup_password_confirm_hint"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_round"
            android:singleLine="true"
            android:password="true" />
    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/editLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/signup"
        android:background="#FFBE42"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textSize="20dp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/checkboxLayout"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/termsCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/signup_terms"
            android:textSize="13dp"
            android:layout_weight="0.5"
            android:layout_marginLeft="50dp"
            android:textColor="@color/dark_gray" />

        <CheckBox
            android:id="@+id/privacyCheckbox"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_privacy"
            android:textSize="13dp"
            android:layout_marginRight="50dp"
            android:layout_weight="0.5"
            android:textColor="@color/dark_gray" />
    </LinearLayout>
</RelativeLayout>
</ScrollView>
</RelativeLayout>
