<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/spinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_spinner"></ProgressBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/placeHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="80"></LinearLayout>

        <View
            android:id="@+id/viewBar"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/button_component"
            android:background="@color/light_gray"></View>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="42dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="1"
                android:transitionGroup="false">

                <Button
                    android:id="@+id/comms"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".33"
                    android:background="@color/main_menubar_bg"
                    android:drawableLeft="@drawable/mn_comm"
                    android:text="@string/tabset_communities"
                    android:textSize="15dp"
                    android:paddingLeft="35dp"
                    android:paddingRight="25dp" />

                <Button
                    android:id="@+id/schools"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".34"
                    android:background="@color/main_menubar_bg"
                    android:drawableLeft="@drawable/mn_tag"
                    android:text="@string/tabset_schools"
                    android:textSize="15dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="20dp" />

                <Button
                    android:id="@+id/profiles"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".33"
                    android:background="@color/main_menubar_bg"
                    android:drawableLeft="@drawable/mn_profile"
                    android:text="@string/tabset_profile"
                    android:textSize="15dp"
                    android:paddingLeft="35dp"
                    android:paddingRight="35dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/notificationCount"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:text="-"
                android:textSize="10dp"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:background="@drawable/badge_circle"
                android:layout_alignTop="@+id/setting"
                android:layout_gravity="center_vertical|right"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="20dp"
                android:gravity="center" />
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>

